# pico-sync

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
pico_sync/: __init__.py  __main__.py  cli.py  commands.py  device.py  gui.py
